--- a/client/painel/cardapio.html
+++ b/client/painel/cardapio.html
@@ -197,7 +197,7 @@
 
                     <div class="col-12">
                         <p>Deseja realmente <b>remover</b> a categoria selecionada? <br><br>
-                        <b class="red">ATENÇÃO:</b> Todos os produtos desta categoria também serão removidos.</p>
+                        <b class="color-red">ATENÇÃO:</b> Todos os produtos desta categoria também serão removidos.</p>
                     </div>
 
                 </div>                
