--- a/client/sobre.html
+++ b/client/sobre.html
@@ -78,9 +78,7 @@
             <p class="mb-0"><b>Loja fechada no momento.</b></p>
         </section>
 
-        <script type="text/javascript" src="js/jquery.min.js"></script>
-        <script type="text/javascript" src="js/popper.min.js"></script>
-        <script type="text/javascript" src="js/bootstrap.min.js"></script>
+        <script type="text/javascript" src="js/bootstrap.bundle.min.js"></script>
         <script type="text/javascript" src="js/app.js"></script>
         <script type="text/javascript" src="js/sobre.js"></script>
 
