--- a/client/index.html
+++ b/client/index.html
@@ -54,11 +54,9 @@
             <i class="fas fa-utensils"></i>&nbsp; Pedido
         </a>
         <a href="carrinho.html" class="menu-bottom-item">
-            <!-- <span>
-                <i class="fas fa-shopping-cart"></i>
-            </span> -->
-            <span class="badge-total-carrinho">2</span> 
-            Carrinho 
+            <span id="icone-carrinho-vazio" class="hidden"><i class="fas fa-shopping-cart"></i></span>
+            <span id="total-carrinho" class="badge-total-carrinho hidden"></span> 
+            &nbsp;Carrinho 
         </a>
     </section>
 
