--- a/client/painel/configuracoes.html
+++ b/client/painel/configuracoes.html
@@ -27,7 +27,7 @@
         <div class="menu-left">
 
             <div class="logo">
-                <img src="../img/logo.png" width="100">
+                <img class="logo-empresa" width="100">
             </div>
 
             <div class="menus">
