--- a/client/painel/relatorio.html
+++ b/client/painel/relatorio.html
@@ -21,7 +21,7 @@
         <div class="menu-left">
 
             <div class="logo">
-                <img src="../img/logo.png" width="100">
+                <img class="logo-empresa" width="100">
             </div>
 
             <div class="menus">
@@ -59,11 +59,11 @@
 
                             <div class="container-right">
                                 <div class="container-dados">
-                                    <p>Front.lee</p>
-                                    <span>frontlee.contato@gmail.com</span>
+                                    <p class="nome-empresa"></p>
+                                    <span class="email-empresa"></span>
                                 </div>
 
-                                <a href="#" class="btn btn-white btn-sm">
+                                <a href="#" class="btn btn-white btn-sm" onclick="app.method.logout()">
                                     <i class="fas fa-sign-out-alt"></i>&nbsp; Sair
                                 </a>
 
