--- a/client/painel/pedidos.html
+++ b/client/painel/pedidos.html
@@ -281,8 +281,12 @@
               </div>
 
               <div class="footer-btn mt-3">
-                <button type="button" class="btn btn-yellow btn-sm">
-                  Aceitar Pedido
+                <button
+                  type="button"
+                  class="btn btn-yellow btn-sm"
+                  onclick="pedido.method.imprimirPedido()"
+                >
+                  Imprimir Pedido
                 </button>
               </div>
             </div>
