--- a/client/carrinho.html
+++ b/client/carrinho.html
@@ -85,7 +85,7 @@
 
                 <div class="card card-opcionais mt-2 hidden" id="containerTipoEntrega">
                     <div class="infos-produto-opcional">
-                        <p class="name mb-0"><b id="lblTipoEntregaTempo">Entrega (60-90min)</b></p>
+                        <p class="name mb-0"><b id="lblTipoEntregaTempo">Entrega</b></p>
                     </div>
                     <div class="checks">
                         <label class="container-check">
@@ -97,7 +97,7 @@
 
                 <div class="card card-opcionais mt-2 hidden" id="containerTipoRetirada">
                     <div class="infos-produto-opcional">
-                        <p class="name mb-0"><b id="lblTipoRetiradaTempo">Retirar no estabelecimento</b></p>
+                        <p class="name mb-0"><b id="lblTipoRetiradaTempo">Retirada</b></p>
                     </div>
                     <div class="checks">
                         <label class="container-check">
