--- a/client/painel/configuracoes.html
+++ b/client/painel/configuracoes.html
@@ -219,19 +219,19 @@
                                 <div class="card card-address cursor-default mt-4 pb-4 ps-4 justify-content-start">
                                     <div class="tempo">
                                         <div class="form-group form-sm">
-                                            <label for="txtTempoMinimoRetirada"><b>Taxa (R$)</b></label>
-                                            <input id="txtTempoMinimoRetirada" type="number" class="form-control" placeholder="R$ 20,00"/>
+                                            <label for="txtTaxaUnicaValor"><b>Taxa (R$) *</b></label>
+                                            <input id="txtTaxaUnicaValor" type="text" class="form-control money" placeholder="20,00"/>
                                         </div>
                                         <div class="form-group me-3">
-                                            <label for="txtTempoMinimoRetirada"><b>Tempo mínimo retirada (min)</b></label>
-                                            <input id="txtTempoMinimoRetirada" type="number" class="form-control" placeholder="30"/>
+                                            <label for="txtTaxaUnicaTempoMinimoEntrega"><b>Tempo mínimo entrega (min)</b></label>
+                                            <input id="txtTaxaUnicaTempoMinimoEntrega" type="number" class="form-control" placeholder="30"/>
                                         </div>
                                         <div class="form-group">
-                                            <label for="txtTempoMaximoRetirada"><b>Tempo máximo retirada (min)</b></label>
-                                            <input id="txtTempoMaximoRetirada" type="number" class="form-control" placeholder="60"/>
+                                            <label for="txtTaxaUnicaTempoMaximoEntrega"><b>Tempo máximo entrega (min)</b></label>
+                                            <input id="txtTaxaUnicaTempoMaximoEntrega" type="number" class="form-control" placeholder="60"/>
                                         </div>
                                     </div>
-                                    <a class="btn btn-yellow btn-sm ms-4">
+                                    <a href="#!" class="btn btn-yellow btn-sm ms-4" onclick="config.method.salvarTaxaUnica()">
                                         <i class="fas fa-check"></i>&nbsp; Salvar Alterações
                                     </a>
                                 </div>
@@ -242,23 +242,23 @@
                                 <div class="card card-address cursor-default mt-4 pb-4 ps-4 justify-content-start">
                                     <div class="tempo">
                                         <div class="form-group form-sm">
-                                            <label for="txtTempoMinimoRetirada"><b>Distância (km)</b></label>
-                                            <input id="txtTempoMinimoRetirada" type="number" class="form-control" placeholder="5"/>
+                                            <label for="txtTaxaDistanciaKm"><b>Distância (km) *</b></label>
+                                            <input id="txtTaxaDistanciaKm" type="number" class="form-control" placeholder="5"/>
                                         </div>
                                         <div class="form-group form-sm">
-                                            <label for="txtTempoMinimoRetirada"><b>Taxa (R$)</b></label>
-                                            <input id="txtTempoMinimoRetirada" type="number" class="form-control" placeholder="R$ 20,00"/>
+                                            <label for="txtTaxaDistanciaValor"><b>Taxa (R$) *</b></label>
+                                            <input id="txtTaxaDistanciaValor" type="text" class="form-control money" placeholder="20,00"/>
                                         </div>
                                         <div class="form-group">
-                                            <label for="txtTempoMinimoRetirada"><b>Tempo mínimo entrega (min)</b></label>
-                                            <input id="txtTempoMinimoRetirada" type="number" class="form-control" placeholder="30"/>
+                                            <label for="txtTaxaDistanciaTempoMinimoEntrega"><b>Tempo mínimo entrega (min)</b></label>
+                                            <input id="txtTaxaDistanciaTempoMinimoEntrega" type="number" class="form-control" placeholder="30"/>
                                         </div>
                                         <div class="form-group">
-                                            <label for="txtTempoMaximoRetirada"><b>Tempo máximo entrega (min)</b></label>
-                                            <input id="txtTempoMaximoRetirada" type="number" class="form-control" placeholder="60"/>
+                                            <label for="txtTaxaDistanciaTempoMaximoEntrega"><b>Tempo máximo entrega (min)</b></label>
+                                            <input id="txtTaxaDistanciaTempoMaximoEntrega" type="number" class="form-control" placeholder="60"/>
                                         </div>
                                     </div>
-                                    <a class="btn btn-yellow btn-sm ms-4">
+                                    <a href="#!" class="btn btn-yellow btn-sm ms-4" onclick="config.method.adicionarTaxaDistancia()">
                                         <i class="fas fa-plus"></i>&nbsp; Adicionar
                                     </a>
                                 </div>
@@ -277,42 +277,7 @@
                                                 <th><b>Ações</b></th>
                                             </tr>
                                         </thead>
-                                        <tbody>
-                                            <tr>
-                                                <td>Até 5km</td>
-                                                <td>R$ 5,00</td>
-                                                <td>de 60 a 90 min</td>
-                                                <td><span class="badge badge-success">Ativado</span></td>
-                                                <td>
-                                                    <div class="dropdown">
-                                                        <button class="btn btn-white btn-sm" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                                            <i class="fas fa-ellipsis-v"></i>
-                                                        </button>
-                                                        <div class="dropdown-menu">
-                                                            <a class="dropdown-item" href="#"><i class="fas fa-check"></i>&nbsp; <b>Ativar</b></a>
-                                                            <a class="dropdown-item color-red" href="#"><i class="fas fa-trash-alt"></i>&nbsp; <b>Remover</b></a>
-                                                        </div>
-                                                    </div>
-                                                </td>
-                                            </tr>
-                                            <tr>
-                                                <td>Até 10km</td>
-                                                <td>R$ 10,00</td>
-                                                <td>de 60 a 90 min</td>
-                                                <td><span class="badge badge-danger">Desativado</span></td>
-                                                <td>
-                                                    <div class="dropdown">
-                                                        <button class="btn btn-white btn-sm" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                                            <i class="fas fa-ellipsis-v"></i>
-                                                        </button>
-                                                        <div class="dropdown-menu">
-                                                            <a class="dropdown-item" href="#"><i class="fas fa-check"></i>&nbsp; <b>Ativar</b></a>
-                                                            <a class="dropdown-item color-red" href="#"><i class="fas fa-trash-alt"></i>&nbsp; <b>Remover</b></a>
-                                                        </div>
-                                                    </div>
-                                                </td>
-                                            </tr>
-                                        </tbody>
+                                        <tbody id="listaTaxasDistancia"></tbody>
                                     </table>
 
                                 </div>
@@ -410,6 +375,40 @@
 
     </section>
 
+
+    <!-- Modal de confirmação para Remover a Taxa por Distancia -->
+    <div id="modalRemoverTaxaDistancia" class="modal fade modal-form" tabindex="-1" role="dialog" data-backdrop="static">
+        <div class="modal-dialog" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title"><i class="fas fa-trash-alt"></i>&nbsp; <b>Remover Taxa</b></h5>
+            </div>
+            <div class="modal-body">
+                
+                <div class="row mb-5">
+
+                    <div class="col-12">
+                        <p>Deseja realmente <b>remover</b> a taxa por distância selecionada?</p>
+                    </div>
+
+                </div>                
+
+                <div class="footer-btn mt-3">
+                    <a href="#!" class="btn btn-red btn-sm me-3" onclick="config.method.removerTaxaDistancia()">
+                        <i class="fas fa-trash-alt"></i>&nbsp; Remover Taxa
+                    </a>
+                    <button type="button" class="btn btn-white btn-sm" data-bs-dismiss="modal" aria-label="Close">
+                        <i class="fas fa-times"></i>&nbsp; Cancelar
+                    </button>
+                </div>
+                
+            </div>
+          </div>
+        </div>
+    </div>
+
+    <script type="text/javascript" src="../js/jquery.min.js"></script>
+    <script type="text/javascript" src="../js/jquery.mask.js"></script>
     <script type="text/javascript" src="../js/bootstrap.bundle.min.js"></script>
     <script type="text/javascript" src="../js/app.js"></script>
     <script type="text/javascript" src="./js/configuracoes.js"></script>
