--- a/client/painel/relatorio.html
+++ b/client/painel/relatorio.html
@@ -16,6 +16,14 @@
 </head>
 <body>
 
+    <div class="container-mensagens" id="container-mensagens">
+
+    </div>
+
+    <div class="loader-full animated fadeIn hidden">
+        <img src="../img/loader.png" width="100" class="animated pulse infinite" />
+    </div>
+
     <section class="bg-menu">
 
         <div class="menu-left">
@@ -79,17 +87,17 @@
                         <div class="col-12">
                             
                             <div class="menus-config">
-                                <a href="#" class="btn btn-white btn-sm active">
+                                <a href="#" class="btn btn-white btn-sm active tab-content" id="tab-faturamento" onclick="relatorio.method.openTab('faturamento')">
                                     <i class="fas fa-dollar-sign"></i> Faturamento
                                 </a>
-                                <a href="#" class="btn btn-white btn-sm">
+                                <a href="#" class="btn btn-white btn-sm tab-content" id="tab-historico" onclick="relatorio.method.openTab('historico')">
                                     <i class="fas fa-receipt"></i> Histórico de Pedidos
                                 </a>
                             </div>
 
                         </div>
 
-                        <div class="col-12 mt-5 mb-5" id="faturamento">
+                        <div class="col-12 mt-5 mb-5 tab-item" id="faturamento">
                         
                             <p class="title-categoria mb-0 mb-4">
                                 <b>Acompanhe suas vendas e faturamento por período.</b>
@@ -100,21 +108,21 @@
                                 <div class="col-3">
                                     <div class="form-group">
                                         <p class="title-categoria mb-0"><b>Data início:</b></p>
-                                        <input id="txtDataInicio" type="date" class="form-control" />
+                                        <input id="txtDataInicioFaturamento" type="date" class="form-control" />
                                     </div>
                                 </div>
 
                                 <div class="col-3">
                                     <div class="form-group">
                                         <p class="title-categoria mb-0"><b>Data fim:</b></p>
-                                        <input id="txtDataFim" type="date" class="form-control" />
+                                        <input id="txtDataFimFaturamento" type="date" class="form-control" />
                                     </div>
                                 </div>
 
                                 <div class="col-3">
                                     <div class="form-group">
                                         <p class="title-categoria mb-0"><b>Categoria:</b></p>
-                                        <select id="ddlUf" class="form-control">
+                                        <select id="ddlCategoriaFaturamento" class="form-control">
                                             <option value="0">Todas</option>
                                             <option value="1">Delivery</option>
                                             <option value="2">Retirada</option>
@@ -123,7 +131,7 @@
                                 </div>
 
                                 <div class="col-3">
-                                    <a class="btn btn-yellow btn-sm mt-4">
+                                    <a href="#!" class="btn btn-yellow btn-sm mt-4" onclick="relatorio.method.filtrarFaturamento()">
                                         <i class="fas fa-search"></i>&nbsp; Filtrar Dados
                                     </a>
                                 </div>
@@ -140,7 +148,7 @@
                                         </div>
                                         <div class="infos">
                                             <p class="text mb-0"><b>Total:</b></p>
-                                            <p class="value-card mb-0"><b>R$ 15650,90</b></p>
+                                            <p class="value-card mb-0"><b id="lblTotalFaturamento">-</b></p>
                                         </div>
                                     </div>
 
@@ -150,7 +158,7 @@
                                         </div>
                                         <div class="infos">
                                             <p class="text mb-0"><b>Nº Pedidos:</b></p>
-                                            <p class="value-card mb-0"><b>8</b></p>
+                                            <p class="value-card mb-0"><b id="lblTotalPedidos">-</b></p>
                                         </div>
                                     </div>
 
@@ -160,7 +168,7 @@
                                         </div>
                                         <div class="infos">
                                             <p class="text mb-0"><b>Ticket Médio:</b></p>
-                                            <p class="value-card mb-0"><b>R$ 154,90</b></p>
+                                            <p class="value-card mb-0"><b id="lblTicketMedio">-</b></p>
                                         </div>
                                     </div>
 
@@ -176,6 +184,7 @@
                                                 <span class="value"></span>
                                             </div>
                                         </div>
+                                        <p class="hidden" id="lblNenhumFaturamento">Nenhum faturamento encontrado no período selecionado.</p>
                                     </div>
                                 </div>
 
@@ -185,7 +194,7 @@
 
                         </div>
 
-                        <div class="col-12 mt-5 mb-5 hidden" id="historico">
+                        <div class="col-12 mt-5 mb-5 tab-item hidden" id="historico">
 
                             <p class="title-categoria mb-0 mb-4">
                                 <b>Filtre todos os pedidos realizados.</b>
@@ -292,10 +301,9 @@
 
     <script type="text/javascript" src="../js/jquery.min.js"></script>
     <script type="text/javascript" src="../js/bootstrap.bundle.min.js"></script>
-    <!-- <script type="text/javascript" src="../js/dataTables.bootstrap.min.js"></script>
-    <script type="text/javascript" src="../js/jquery.dataTables.min.js"></script> -->
     <script src="https://cdn.datatables.net/v/bs5/dt-1.13.6/datatables.min.js"></script>
     <script type="text/javascript" src="../js/chart.js"></script>
+    <script type="text/javascript" src="../js/app.js"></script>
     <script type="text/javascript" src="./js/relatorio.js"></script>
 
 </body> 
