finalizado tela de Histórico de Pedidos

--- a/client/painel/pedidos.html
+++ b/client/painel/pedidos.html
@@ -209,5 +209,11 @@
     <script type="text/javascript" src="../js/app.js"></script>
     <script type="text/javascript" src="./js/pedidos.js"></script>
 
+    <script type="text/javascript">
+        document.addEventListener("DOMContentLoaded", function (event) {
+            pedido.event.init();
+        });
+    </script>
+
 </body> 
 </html>
